--- a/src/css/scss/_header.scss
+++ b/src/css/scss/_header.scss
@@ -19,9 +19,9 @@
      @media #{$sm} {
       gap:10px;
      }
-    @media #{$lg} {
-      flex-wrap: wrap;
-    }
+    // @media #{$lg} {
+    //   flex-wrap: wrap;
+    // }
     @media #{$sm} {
       padding: 20px 0;
     }
